# minisoft-editor

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
minisoft-compiler/: Cargo.toml
minisoft-compiler/src/: compiler.rs  lib.rs
minisoft-compiler/src/codegen/: quadruple.rs
minisoft-compiler/src/lexer/: error.rs
minisoft-compiler/src/parser/: error.rs
minisoft-compiler/tests/: lexer_tests.rs  parser_tests.rs  semantic_tests.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: minisoft-icon.icns
src-tauri/src/: lib.rs
src/app/: page.tsx
src/components/: AppHeader.tsx  CodeEditor.tsx  ErrorDisplay.tsx  ErrorReporter.tsx  FileModal.tsx  MainContent.tsx  ResultPanel.tsx  ResultTabs.tsx  ResultsDisplay.tsx  Terminal.tsx  WelcomeOverlay.tsx
src/components/editor/: CodeEditor.css  CodeEditor.tsx
src/components/results/: ASTViewer.tsx  AstDisplay.tsx  QuadruplesTable.tsx  QuadruplesViewer.tsx  ResultPanel.tsx  SymbolTable.tsx  SymbolsViewer.tsx  TokensTable.tsx  TokensViewer.tsx
src/components/terminal/: ExampleFiles.ts  FileSystem.ts  commands.tsx  types.ts
src/features/editor/: CodeEditor.tsx
src/features/results/: ResultPanel.tsx
src/features/settings/: SettingsModal.tsx  SettingsPanel.tsx
src/features/terminal/: Terminal.tsx
src/hooks/: useAppInitialization.ts  useAppState.ts  useCompiler.ts  useFileOperations.ts  useNotifications.ts  useTheme.ts
src/styles/: globals.css
src/types/: ast.ts  common.ts  compiler.ts  errors.ts  index.ts  quadruple.ts
src/utils/: theme.ts  tokenizer.ts
(+42 files in other folders)
