[package]
name = "minisoft-compiler"
version = "0.1.0"
edition = "2024"
build = "build.rs" # For LALRPOP integration

[dependencies]
colored = "3.0.0"
lalrpop = "0.22.1"
lalrpop-util = "0.22.1"
logos = "0.15.0"
regex = "1.11.1"
clap = "4" 
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[build-dependencies]
lalrpop = "0.22.1"
